--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,16 +59,21 @@ header {
   color: var(--destaque);
 }
 
+
 main {
   display: grid;
   grid-template-columns: auto 90vw auto;
-  grid-column: 2;
   gap: 20px;
   margin-top: 20px;
 }
 
+section#detalhes {
+  grid-column: 2;
+}
+
 section#ficha {
   background-color: var(--fundo-card);
+  grid-column: 2;
   padding: 20px;
   border-radius: 8px;
 }
@@ -127,14 +132,14 @@ article > h2 {
   margin-bottom: 10px;
 }
 
-class.video-container {
+.video-container {
   position: relative;
   width: 100%;
   margin: auto;
   aspect-ratio: 16/9;
 }
 
-class.video-container > iframe {
+.video-container > iframe {
   position: absolute;
   top: 0;
   left: 0;
